--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
             font-family: 'Inter', sans-serif;
             background-color: #f8fafc;
         }
+        /* 防止页面在加载完成前闪烁 */
+        [v-cloak] { display: none; }
     </style>
 <script type="importmap">
 {
@@ -19,8 +21,8 @@
     "react": "https://esm.sh/react@^19.2.4",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "react/": "https://esm.sh/react@^19.2.4/",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "vite": "https://esm.sh/vite@^7.3.1"
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
@@ -28,7 +30,8 @@
 </head>
 <body>
     <div id="root"></div>
-    <script type="module" src="index.tsx"></script>
+    <!-- 使用 ./index.tsx 确保 Vite 在构建时能正确处理入口文件 -->
+    <script type="module" src="./index.tsx"></script>
 <script type="module" src="/index.tsx"></script>
 </body>
 </html>
